# dec

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  DEPENDENCIES.md  README.md  SOLANA_GUIDE.md  gemini.md  render.yaml
ai-agent/: keygen.js  keygen.ts  package-lock.json  package.json
ai-agent/data/: history.json  settings.json
ai-agent/src/: analyzer.ts  idl.json  initialize.ts  market-oracle.ts  mock-data.ts  server.ts  solana-client.ts
ai-agent/src/types/: index.ts
ai-agent/src/utils/: market.ts
app/: package-lock.json  package.json
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/components/: WalletContextProvider.tsx  ai-reasoning.tsx  demo-controls.tsx  economic-impact.tsx  gpu-marketplace.tsx  kpi-bar.tsx  market-feed.tsx  price-chart.tsx  pricing-board.tsx
app/src/hooks/: use-oracle-sync.ts
app/src/types/: index.ts
programs/depin_pricing/: Cargo.toml
programs/depin_pricing/src/: errors.rs  lib.rs  state.rs
programs/depin_pricing/src/instructions/: dispute_multiplier.rs  initialize_protocol.rs  initialize_provider.rs  mod.rs  rent_hardware.rs  update_multiplier.rs  update_oracle.rs  withdraw_earnings.rs
tests/: depin_pricing.ts
