[package]
name = "depin_pricing"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"
rust-version = "1.75.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "depin_pricing"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
proc-macro2 = { version = "1.0.106", features = ["span-locations"] }
